[package]
name = "deeeep_forums_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
color-backtrace = "0.6.1"
colored = "2.1.0"
dotenvy = "0.15.7"
reqwest = "0.11.24"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
sublime_fuzzy = "0.7.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } 
